@@ -1,5 +1,7 @@
 # This file is part of Tryton.  The COPYRIGHT file at the top level of
 # this repository contains the full copyright notices and license terms.
+from decimal import Decimal
+
 from trytond.pool import Pool, PoolMeta
 from trytond.transaction import Transaction
 
@@ -13,8 +15,9 @@ class Party:
     @classmethod
     def get_credit_amount(cls, parties, name):
         pool = Pool()
-        Sale = pool.get('sale.sale')
         Currency = pool.get('currency.currency')
+        Sale = pool.get('sale.sale')
+        Uom = pool.get('product.uom')
         User = pool.get('res.user')
 
         amounts = super(Party, cls).get_credit_amount(parties, name)
@@ -31,14 +34,21 @@ class Party:
         for sale in sales:
             amount = 0
             for line in sale.lines:
-                amount += Currency.compute(sale.currency, line.amount,
-                    currency, round=False)
+                quantity = line.quantity
+                if not quantity:
+                    continue
                 for invoice_line in line.invoice_lines:
                     invoice = invoice_line.invoice
                     if invoice and invoice.move:
-                        amount -= Currency.compute(invoice.currency,
-                            invoice_line.amount, currency)
-            amounts[sale.party.id] += amount
+                        quantity -= Uom.compute_qty(
+                            invoice_line.unit, invoice_line.quantity,
+                            line.unit, round=False)
+                amount += Currency.compute(
+                    sale.currency,
+                    Decimal(str(quantity)) * line.unit_price, currency,
+                    round=False)
+            amounts[sale.party.id] = currency.round(
+                amounts[sale.party.id] + amount)
         return amounts
 
     @classmethod
