@@ -1,3 +1,5 @@
+* Base sale credit amount on quantity
+
 Version 4.6.0 - 2017-10-30
 * Bug fixes (see mercurial logs for details)
 
